# distributed

./: CHANGELOG.md  CMakeLists.txt
cmake/: vix_ai_distributedConfig.cmake.in
include/vix/ai/distributed/: FederatedTrainer.hpp  Peer.hpp  SecureChannel.hpp  SyncManager.hpp
src/: FederatedTrainer.cpp  Peer.cpp  SecureChannel.cpp  SyncManager.cpp
tests/: CMakeLists.txt  fl_tests.cpp  peer_tests.cpp  secure_tests.cpp  sync_tests.cpp
